# open-tl866

./: .clang-format  .gitignore  .gitmodules  Dockerfile  LICENSE.md  Makefile  README.md  format.sh
contrib/: 96-opentl866.rules  README.md
firmware/: .gitignore  CMakeLists.txt  README.md  arglib.c  arglib.h  at89.c  at89.h  comlib.c  comlib.h  configuration_bits.c  ezzif.c  ezzif.h  io.c  io.h  main.c  mode.h  parse.c  parse.h  pin_mapping.md  stock_compat.c  stock_compat.h  system.h
firmware/modes/at89/: main.c
firmware/modes/bitbang/: bitbang.c  bitbang.h  main.c
firmware/modes/epromv/: main.c
firmware/modes/ezzif/: main.c
firmware/modes/glitch/: glitch.c  glitch.h
firmware/modes/mcs48/: main.c
firmware/modes/programmer/at89/: at89.c  at89.h  main.c
firmware/modes/programmer/epromv/: main.c
firmware/nbproject/: configurations.xml  project.xml
firmware/usb/: usb_callbacks.c  usb_config.h  usb_descriptors.c
py/: format.sh  pep8  setup.py
py/example/: bitbang_read_27c256.py  blinky.py  ezbang_1hz.py  pin_test.py
py/examples/: blinky.py  command.py  eprom_read.py  ezbang_1hz.py  pin_test.py
py/otl866/: __init__.py  aclient.py  at89.py  bitbang.py  cli.py  driver.py  mem.py  util.py
py/otl866/bootloader/: cli.py  driver.py  firmware.py  windows.py
py/test/: test_at89.py  test_bitbang.py
py/util/: command.py  read_rom.py
pytl866/: setup.py
pytl866/examples/: eprom_read.py  pin_test.py
pytl866/pytl866/: __init__.py  cli.py  context.py  driver.py
pytl866/pytl866/bootloader/: cli.py  driver.py
